# MLOPS_2025_sem1_1

./: CMakeLists.txt  Dockerfile  Makefile  README.md  pyproject.toml
python/: bindings.cpp
src/: svd.cpp  svd.hpp
tests/: test_svd.py
