[build-system]
requires = ["scikit-build-core[pyproject]", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "svd-bindings"
version = "0.1.0"
description = "SVD C++ bindings for Python"
requires-python = ">=3.8"

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.build-type = "Release"
